--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ node_js:
 cache: npm
 
 before_install:
-   mkdir public
+   - mkdir public
    - ls -la
 
 install:
-   - ls -la
-   npm install
-   - ls -la
+   - pwd
+   - npm install
+   - pwd
